Prevent crash when History changed to 1.  Konsole's History needs some TLC.

BUG: 95990

svn path=/trunk/kdebase/konsole/; revision=376604